--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,16 @@
 .chosen-container-multi .chosen-choices li.search-choice span,pre {
 	word-wrap: break-word
 }
-
+.google, .google:hover {
+    background-color: #dd4b39 !important;
+    border: 2px solid #dd4b39 !important;
+    color: #fff !important;
+}
+.facebook, .facebook:hover {
+    background-color: #3b5999 !important;
+    border: 2px solid #3b5999 !important;
+    color: #fff !important;
+}
 article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary {
 	display: block
 }
