--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -88,7 +88,9 @@
                 <li>
                   <a href="#/mobile">Mobile Application Development</a>
                 </li>
-
+                 <li>
+                  <a href="#/DevOps">Deployment Platforms</a>
+                </li>
             </ul>
 
           </li>
