--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,13 @@
 .form-control,button.close,input[type=search] {
 	-webkit-appearance: none
 }
-
+.block-lessons-series .media-holder {
+    background: #555;
+    max-height: 200px !important;
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+}
 .chosen-container-multi .chosen-choices li.search-choice span,pre {
 	word-wrap: break-word
 }
